fix spacing of span.value-string

--- a/app/assets/stylesheets/handout.css.sass
+++ b/app/assets/stylesheets/handout.css.sass
@@ -113,6 +113,11 @@ strong, b
     width: 120px
     text-align: right
 
+  .value-string
+    width: 50%
+    margin-right: 1%
+    text-align: left
+
   .currency
     display: block
     width: auto
