--- a/app/assets/stylesheets/partials/_real_estates.css.sass
+++ b/app/assets/stylesheets/partials/_real_estates.css.sass
@@ -145,7 +145,8 @@ td
     text-align: right
 
   .value-string
-    width: 176px
+    width: 166px
+    margin-right: 10px
     text-align: left
 
   .currency
